@@ -3,7 +3,7 @@ package com.mycmd;
 /** String helper functions for commands. */
 public class StringUtils {
   public static boolean isEmpty(String s) {
-    return s == null || s.trim().isEmpty();
+    return s == null || s.isBlank();
   }
 
   public static String join(String[] arr, int start) {
